[package]
name = "ruxy"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
strip = true

[dependencies]
bytes = "1.9.0"
http-body-util = "0.1.2"
hyper = { version = "1.5.1", features = ["client", "server", "http1"] }
hyper-util = { version = "0.1.10", features = ["client", "server", "tokio", "http1"] }
reqwest = { version = "0.12.9", features = ["charset", "http2", "rustls-tls"], default-features = false }
tokio = { version = "1.42.0", features = ["fs", "io-std", "macros", "net", "rt-multi-thread"] }
